--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <nav class="local-link">
-      <h1>肉球タッチ<img src="img/猫の足跡_縮小_darkbrown.png"></h1>
+      <h1>松江事務所<img src="img/猫の足跡_縮小_darkbrown.png"></h1>
       <ul>
         <li>
           <a href="#">HOME</a>
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="profile">
         <p>webページ制作</p>
-        <h2>肉球タッチ<img src="img/猫の足跡_縮小_darkbrown.png"></h2>
+        <h2>松江事務所<img src="img/猫の足跡_縮小_darkbrown.png"></h2>
         <ul class="selfpr">
           <li>ホームページ(HP)作成<br>ランディングページ(LP)制作</li>
           <li>HTML・CSSコーディング</li>
