--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- <link rel="canonical" href=""> -->
   <title>ポートフォリオ</title>
   <link rel="icon" href="img/ashiato.png">
+  <link rel="preconnect" href="https://use.fontawesome.com">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -16,7 +17,7 @@
 <body>
   <header>
     <nav class="local-link">
-      <h1>松江事務所<img src="img/猫の足跡_縮小_darkbrown.png"></h1>
+      <h1>中海事務所<img src="img/猫の足跡_縮小_darkbrown.png"></h1>
       <ul>
         <li>
           <a href="#">HOME</a>
@@ -41,21 +42,28 @@
     <ul>
       <li>
         <a href="https://iggy-type.github.io/handsoap/" target="_blank">Work03<br>
-          <img src="img/ハンドソープ見本.jpg" alt="サンプル03">
+          <img src="img/ハンドソープ見本.jpg" alt="サンプル04">
         </a>
         <p>製品・商品紹介ページ<br>(今件はハンドソープ)</p>
       </li>
       <li>
-        <a href="https://iggy-type.github.io/shop/" target="_blank">Work02<br>
-          <img src="img/架空ショップcalm_見本.jpg" alt="サンプル01">
+        <a href="https://iggy-type.github.io/the_chair/" target="_blank">Work03<br>
+          <img src="img/The_Chair_見本.jpg" alt="サンプル03">
         </a>
-        <p>アパレルショップ<br>ランディングページ</p>
+        <p>シンプルなランディングページ</p>
+        <p><a href="http://nikukyutype.starfree.jp/the-chair/" target="_blank">WordPressでも再現しています</a></p>
       </li>
       <li>
         <a href="https://iggy-type.github.io/cafe/" target="_blank">Work01<br>
           <img src="img/架空カフェcalm_見本.jpg" alt="サンプル02">
         </a>
         <p>カフェ<br>ホームページ</p>
+      </li>
+      <li>
+        <a href="https://iggy-type.github.io/shop/" target="_blank">Work02<br>
+          <img src="img/架空ショップcalm_見本.jpg" alt="サンプル01">
+        </a>
+        <p>アパレルショップ<br>ランディングページ</p>
       </li>
     </ul>
   </section>
@@ -65,7 +73,7 @@
     <div class="container">
       <div class="profile">
         <p>webページ制作</p>
-        <h2>松江事務所<img src="img/猫の足跡_縮小_darkbrown.png"></h2>
+        <h2>中海事務所<img src="img/猫の足跡_縮小_darkbrown.png"></h2>
         <ul class="selfpr">
           <li>ホームページ(HP)作成<br>ランディングページ(LP)制作</li>
           <li>HTML・CSSコーディング</li>
