--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta name="robots" content="noindex,nofollow">
+  <!-- <meta name="robots" content="noindex,nofollow"> -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta name="description" content="webページ制作サポート ポートフォリオです。UI/UXデザイン。HTML＆CSSコーディング。ホームページ制作"> -->
+  <!-- <meta name="description" content="webページ制作サポート 中海事務所のポートフォリオです。UI/UXデザイン。HTML＆CSSコーディング。ホームページ制作"> -->
   <!-- <link rel="canonical" href=""> -->
   <title>ポートフォリオ</title>
   <link rel="icon" href="img/ashiato.png">
@@ -51,7 +51,7 @@
           <img src="img/The_Chair_見本.jpg" alt="サンプル03">
         </a>
         <p>シンプルなランディングページ</p>
-        <p><a href="http://nikukyutype.starfree.jp/the-chair/" target="_blank">WordPressでも再現しています</a></p>
+        <p><a href="http://nikukyutouch.wp.xdomain.jp/the-chair/" target="_blank">WordPressでも再現しています</a></p>
       </li>
       <li>
         <a href="https://iggy-type.github.io/cafe/" target="_blank">Work02<br>
@@ -72,26 +72,27 @@
     <h1>Profile</h1>
     <div class="container">
       <div class="profile">
-        <p>webページ制作</p>
+        <p>webページ制作サポート</p>
         <h2>中海事務所<img src="img/猫の足跡_縮小_darkbrown.png"></h2>
         <ul class="selfpr">
+          <li>web(UI/UX)デザイナー</li>
           <li>ホームページ(HP)作成<br>ランディングページ(LP)制作</li>
           <li>HTML・CSSコーディング</li>
-          <li>レスポンシブウェブデザイン</li>
+          <li>レスポンシブウェブデザイン<br>(スマホ ⇔ タブレット ⇔ PC)</li>
           <!-- <li>SEO対策</li> -->
         </ul>
       </div>
       <div class="icon-sns">
-        <img class="nekoicon" src="img/デスクトップPCと柴犬_480x480.png" alt="アイコン">
+        <img class="nekoicon" src="img/デスクトップPCと柴犬_480x480.png" alt="中海事務所のアイコン">
         <a class="twitter" href="https://twitter.com/TwitterJP" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
     </div>
-  </section>
+   </section>
 
   <div class="return">
     <a href="#">TOP</a>
   </div>
-  <footer>&copy; サンプル</footer>
+  <footer>&copy; 中海事務所</footer>
   <script src="js/scroll.js"></script>
 </body>
 </html>
