--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta name="description" content="webページ制作サポート 中海事務所のポートフォリオです。UI/UXデザイン。HTML＆CSSコーディング。ホームページ制作"> -->
+  <!-- <meta name="description" content="webページ制作サポート Office Chukaiのポートフォリオです。UI/UXデザイン。HTML＆CSSコーディング。ホームページ制作"> -->
   <!-- <link rel="canonical" href=""> -->
   <title>ポートフォリオ</title>
   <link rel="icon" href="img/ashiato.png">
@@ -17,7 +17,7 @@
 <body>
   <header>
     <nav class="local-link">
-      <h1>中海事務所<img src="img/猫の足跡_縮小_darkbrown.png"></h1>
+      <h1>Office<i class="fas fa-code"></i>Chukai</h1>
       <ul>
         <li>
           <a href="#">HOME</a>
@@ -33,7 +33,7 @@
     <div class="header-color"></div>
     <div class="sitetitle">
       <!-- <img src="img/neko_on_keyboard01.jpg" alt="ヘッダー画像"> -->
-      <h1>My Portfolio</h1>
+      <h1>Office<i class="fas fa-code"></i>Chukai</h1>
     </div>
   </header>
 
@@ -73,7 +73,7 @@
     <div class="container">
       <div class="profile">
         <p>webページ制作サポート</p>
-        <h2>中海事務所<img src="img/猫の足跡_縮小_darkbrown.png"></h2>
+        <h2>Office<i class="fas fa-code"></i>Chukai</h2>
         <ul class="selfpr">
           <li>web(UI/UX)デザイナー</li>
           <li>ホームページ(HP)作成<br>ランディングページ(LP)制作</li>
@@ -83,7 +83,7 @@
         </ul>
       </div>
       <div class="icon-sns">
-        <img class="nekoicon" src="img/デスクトップPCと柴犬_480x480.png" alt="中海事務所のアイコン">
+        <img class="nekoicon" src="img/デスクトップPCと柴犬_480x480.png" alt="Office Chukaiのアイコン">
         <a class="twitter" href="https://twitter.com/TwitterJP" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
     </div>
@@ -92,7 +92,7 @@
   <div class="return">
     <a href="#">TOP</a>
   </div>
-  <footer>&copy; 中海事務所</footer>
+  <footer>&copy; Office<i class="fas fa-code"></i>Chukai</footer>
   <script src="js/scroll.js"></script>
 </body>
 </html>
