--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <li>web(UI/UX)デザイナー</li>
           <li>ホームページ(HP)作成<br>ランディングページ(LP)制作</li>
           <li>HTML・CSSコーディング</li>
+          <li>HTMLページをWordPressに再現</li>
           <li>レスポンシブウェブデザイン<br>(スマホ ⇔ タブレット ⇔ PC)</li>
-          <!-- <li>SEO対策</li> -->
         </ul>
       </div>
       <div class="icon-sns">
